features added: singup/login auth, professors can create appointment groups and students/professors can view them

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Scheduler App
+spring.devtools.restart.additional-paths=src/main/resources/
+spring.thymeleaf.cache=false
+
+
+# SQLite Database Configuration
+spring.datasource.url=jdbc:sqlite:scheduler.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Disable Open EntityManager in View
+spring.jpa.open-in-view=false
