--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=Scheduler App
 spring.devtools.restart.additional-paths=src/main/resources/
 spring.thymeleaf.cache=false
 
+server.port=${PORT:8080}
 
 # SQLite Database Configuration
 spring.datasource.url=jdbc:sqlite:scheduler.db
@@ -13,5 +14,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Disable Open EntityManager in View
 spring.jpa.open-in-view=false
